--- a/views/index.jade
+++ b/views/index.jade
@@ -2,4 +2,11 @@ extends layout
 
 block content
   h1= title
-  p Welcome to #{title}
+  div
+    p Welcome to #{title}
+        The sum of 5+10 is: {{5 + 10}}
+
+    input(type='text', ng-model="sometext")
+    br
+
+    | Hello {{ sometext }}
