--- a/views/home.html
+++ b/views/home.html
@@ -2,10 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Home</title>
 </head>
 <body>
-Bonjour
-
+Homeeee
 </body>
 </html>
