--- a/views/contacts.html
+++ b/views/contacts.html
@@ -10,14 +10,14 @@
     <title>Contact Form | Gentelella Alela! by Colorlib</title>
 
     <!-- Bootstrap -->
-    <link href="../public/vendors/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="vendors/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
     <!-- Font Awesome -->
-    <link href="../public/vendors/font-awesome/css/font-awesome.min.css" rel="stylesheet">
+    <link href="vendors/font-awesome/css/font-awesome.min.css" rel="stylesheet">
     <!-- NProgress -->
-    <link href="../public/vendors/nprogress/nprogress.css" rel="stylesheet">
+    <link href="vendors/nprogress/nprogress.css" rel="stylesheet">
 
     <!-- Custom Theme Style -->
-    <link href="../public/build/css/custom.min.css" rel="stylesheet">
+    <link href="build/css/custom.css" rel="stylesheet">
   </head>
 
   <body class="nav-md">
@@ -34,7 +34,7 @@
             <!-- menu profile quick info -->
             <div class="profile clearfix">
               <div class="profile_pic">
-                <img src="../public/images/user.png" alt="..." class="img-circle profile_img">
+                <img src="images/user.png" alt="..." class="img-circle profile_img">
               </div>
               <div class="profile_info">
                 <span>Welcome,</span>
@@ -179,7 +179,7 @@
               <ul class="nav navbar-nav navbar-right">
                 <li class="">
                   <a href="javascript:;" class="user-profile dropdown-toggle" data-toggle="dropdown" aria-expanded="false">
-                    <img src="../public/images/user.png" alt="">John Doe
+                    <img src="images/user.png" alt="">John Doe
                     <span class=" fa fa-angle-down"></span>
                   </a>
                   <ul class="dropdown-menu dropdown-usermenu pull-right">
@@ -203,7 +203,7 @@
                   <ul id="menu1" class="dropdown-menu list-unstyled msg_list" role="menu">
                     <li>
                       <a>
-                        <span class="image"><img src="../public/images/user.png" alt="Profile Image" /></span>
+                        <span class="image"><img src="images/user.png" alt="Profile Image" /></span>
                         <span>
                           <span>John Smith</span>
                           <span class="time">3 mins ago</span>
@@ -215,7 +215,7 @@
                     </li>
                     <li>
                       <a>
-                        <span class="image"><img src="../public/images/user.png" alt="Profile Image" /></span>
+                        <span class="image"><img src="images/user.png" alt="Profile Image" /></span>
                         <span>
                           <span>John Smith</span>
                           <span class="time">3 mins ago</span>
@@ -227,7 +227,7 @@
                     </li>
                     <li>
                       <a>
-                        <span class="image"><img src="../public/images/user.png" alt="Profile Image" /></span>
+                        <span class="image"><img src="images/user.png" alt="Profile Image" /></span>
                         <span>
                           <span>John Smith</span>
                           <span class="time">3 mins ago</span>
@@ -239,7 +239,7 @@
                     </li>
                     <li>
                       <a>
-                        <span class="image"><img src="../public/images/user.png" alt="Profile Image" /></span>
+                        <span class="image"><img src="images/user.png" alt="Profile Image" /></span>
                         <span>
                           <span>John Smith</span>
                           <span class="time">3 mins ago</span>
@@ -322,7 +322,7 @@
                               </ul>
                             </div>
                             <div class="right col-xs-5 text-center">
-                              <img src="../public/images/user.png" alt="" class="img-circle img-responsive">
+                              <img src="images/user.png" alt="" class="img-circle img-responsive">
                             </div>
                           </div>
                           <div class="col-xs-12 bottom text-center">
@@ -474,7 +474,7 @@
                               </ul>
                             </div>
                             <div class="right col-xs-5 text-center">
-                              <img src="../public/images/user.png" alt="" class="img-circle img-responsive">
+                              <img src="images/user.png" alt="" class="img-circle img-responsive">
                             </div>
                           </div>
                           <div class="col-xs-12 bottom text-center">
@@ -671,15 +671,15 @@
     </div>
 
     <!-- jQuery -->
-    <script src="../public/vendors/jquery/dist/jquery.min.js"></script>
+    <script src="vendors/jquery/dist/jquery.min.js"></script>
     <!-- Bootstrap -->
-    <script src="../public/vendors/bootstrap/dist/js/bootstrap.min.js"></script>
+    <script src="vendors/bootstrap/dist/js/bootstrap.min.js"></script>
     <!-- FastClick -->
-    <script src="../public/vendors/fastclick/lib/fastclick.js"></script>
+    <script src="vendors/fastclick/lib/fastclick.js"></script>
     <!-- NProgress -->
-    <script src="../public/vendors/nprogress/nprogress.js"></script>
+    <script src="vendors/nprogress/nprogress.js"></script>
 
     <!-- Custom Theme Scripts -->
-    <script src="../public/build/js/custom.min.js"></script>
+    <script src="build/js/custom.js"></script>
   </body>
 </html>
