--- a/views/conges.html
+++ b/views/conges.html
@@ -15,7 +15,7 @@
           <div class="">
             <div class="page-title">
               <div class="title_left">
-                <h3>Notes de frais</h3>
+                <h3>Congés</h3>
               </div>
 
               <div class="title_right">
@@ -36,7 +36,7 @@
               <div class="col-md-12">
                 <div class="x_panel">
                   <div class="x_title">
-                    <h2>details de la note du mois de janvier 2016 <small></small></h2>
+                    <h2>congés pris <small></small></h2>
                     <ul class="nav navbar-right panel_toolbox">
                       <li><a class="collapse-link"><i class="fa fa-chevron-up"></i></a>
                       </li>
@@ -52,29 +52,29 @@
                   </div>
                   <div class="x_content">
 
-                    <table id="datatable-buttons" class="table table-striped table-bordered">
-                      <thead>
-                        <tr>
-                          <th>Mission</th>
-                          <th>catégorie frais</th>
-                          <th>Justificatif</th>
-                          <th>Statut</th>
-                          <th></th>
-                          <th>operation</th>
-                        </tr>
-                      </thead>
-                      <tbody>
-                        <tr>
-                          <td></td>
-                          <td></td>
-                          <td></td>
-                          <td></td>
-                          <td></td>
-                          <td></td>
-                        </tr>
-                       
-                      </tbody>
-                 </table> 
+                        <table id="datatable-buttons" class="table table-striped table-bordered">
+                        <thead>
+                          <tr>
+                            <th>Motif</th>
+                            <th>Date de début</th>
+                            <th>Date de fin</th>
+                            <th>Statut</th>
+                            <th></th>
+                            <th>operation</th>
+                          </tr>
+                        </thead>
+                        <tbody>
+                          <tr>
+                            <td>Diarhée</td>
+                            <td>15/03/2016</td>
+                            <td>19/05/2016</td>
+                            <td>Invalidé Cs</td>
+                            <td></td>
+                            <td></td>
+                          </tr>
+                         
+                        </tbody>
+                   </table> 
 
                   </div>
                 </div>
@@ -107,4 +107,3 @@
 
 
 
-   
