--- a/views/calendar.html
+++ b/views/calendar.html
@@ -1,41 +1,78 @@
-<!DOCTYPE html>
-<html lang="en">
 
- 
-    <!-- FullCalendar -->
-    <link href="../vendors/fullcalendar/dist/fullcalendar.min.css" rel="stylesheet">
-    <link href="../vendors/fullcalendar/dist/fullcalendar.print.css" rel="stylesheet" media="print">
-    <link href="../vendors/switchery/dist/switchery.min.css" rel="stylesheet">
-   
+<meta charset="utf-8">
+<link href="../vendors/fullcalendar/dist/fullcalendar.min.css" rel="stylesheet">
+<link href="../vendors/fullcalendar/dist/fullcalendar.print.css" rel="stylesheet" media="print">
 
-  
+<script src="../vendors/moment/min/moment.min.js"></script>
+<script src="../vendors/fullcalendar/dist/fullcalendar.min.js"></script>
+<script src="../vendors/switchery/dist/switchery.min.js"></script>
+<script>
+
+	$(document).ready(function() {
+		
+		$('#calendar').fullCalendar({
+			header: {
+				left: 'prev,next today',
+				center: 'title',
+				right: 'month,agendaWeek,agendaDay'
+			},
+			defaultDate: '2014-06-12',
+			defaultView: 'month',
+			editable: true,
+			events: [
+				{
+					title: 'All ddd Event',
+					start: '2014-06-01'
+				},
+				{
+					title: 'Long Event',
+					start: '2014-06-07',
+					end: '2014-06-10'
+				},
+				{
+					id: 999,
+					title: 'Repeating Event',
+					start: '2014-06-09T16:00:00'
+				},
+				{
+					id: 999,
+					title: 'Repeating Event',
+					start: '2014-06-16T16:00:00'
+				},
+				{
+					title: 'Meeting',
+					start: '2014-06-12T10:30:00',
+					end: '2014-06-12T12:30:00'
+				},
+				{
+					title: 'lolo',
+					start: '2014-06-12T12:00:00'
+				},
+				{
+					title: 'Birthday Party',
+					start: '2014-06-13T07:00:00'
+				},
+				{
+					title: 'Click for Google',
+					url: 'http://google.com/',
+					start: '2014-06-28'
+				}
+			]
+		});
+		
+	});
+
+</script>
+<style type="text/css">
+
+</style>
 
 
+<div class="col-md-10">
+<div id="calendar"></div>
+</div>
 
-        <!-- page content -->
-        
-          <div class="">
-            <div class="page-title">
-
-            <div class="clearfix"></div>
-
-            <div class="row">
-
-              <div class="col-md-10">
-                <div class="x_panel">
-                  <div class="x_title">
-                    <h2>Calendrier des congés <small></small></h2>                    
-                    <div class="clearfix"></div>
-                  </div>
-                  <div class="x_content">
-
-                    <div id='calendar'></div>
-
-                  </div>
-                </div>
-              </div>
-
-              <div class="col-md-2">
+   <div class="col-md-2">
                 <div class="x_panel">
                   <div class="x_title">
                     <h2>Filtre <small></small></h2>                    
@@ -69,147 +106,4 @@
                 </div>
               </div>
 
-            </div>
-          </div>
-        
-        <!-- /page content -->
 
-
-    <!-- calendar modal -->
-    <div id="CalenderModalNew" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-      <div class="modal-dialog">
-        <div class="modal-content">
-
-          <div class="modal-header">
-            <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
-            <h4 class="modal-title" id="myModalLabel">Demande de congé </h4>
-          </div>
-          <div class="modal-body">
-            <div id="testmodal" style="padding: 5px 20px;">
-             <form class="form-horizontal form-label-left" novalidate>
-
-                      
-
-                      <div class="item form-group">
-                        <label class="control-label col-md-3 col-sm-3 col-xs-12" for="name">Motif du congé <span class="required">*</span>
-                        </label>
-                        <div class="col-md-6 col-sm-6 col-xs-12">
-                          <input id="name" class="form-control col-md-7 col-xs-12" data-validate-length-range="5" data-validate-words="1" name="name" placeholder="" required="required" type="text">
-                        </div>
-                      </div>
-
-
-
-
-                      <div class="item form-group">
-                        <label class="control-label col-md-3 col-sm-3 col-xs-12" for="name">Durée du congé   <span class="required">*</span>
-                        </label>
-                         <div class="col-md-6 col-sm-6 col-xs-12">
-                        <div class="input-prepend input-group">
-                                  <span class="add-on input-group-addon"><i class="glyphicon glyphicon-calendar fa fa-calendar"></i></span>
-                                  <input type="text" style="width: 200px" name="reservation" id="reservation" class="form-control" value="01/01/2016 - 01/25/2016" />
-                                </div>
-                                </div>
-                      </div>
-
-
-                      <div class="item form-group">
-                        <label class="control-label col-md-3 col-sm-3 col-xs-12" for="name">Justificatif   
-                        </label>
-
-                        <div class="col-md-6 col-sm-6 col-xs-12 checkbox">
-                            <label>
-                              <input type="file" data-role="magic-overlay" data-target="#pictureBtn" data-edit="insertImage">
-                            </label>
-                          </div>
-
-                        </div>
-
-
-                      <div class="item form-group">
-                        <label class="control-label col-md-3 col-sm-3 col-xs-12" for="name">Congé sans solde   
-                        </label>
-
-
-                        <div class="col-md-6 col-sm-6 col-xs-12 checkbox">
-                            <label>
-                              <input type="checkbox" class="js-switch" checked /> 
-                            </label>
-                          </div>
-
-                        </div>
-
-
-                      <div class="ln_solid"></div>
-                      <div class="form-group">
-                        <div class="col-md-6 col-md-offset-3">
-                          <button type="submit" class="btn btn-primary">Cancel</button>
-                          <button id="send" type="submit" class="btn btn-success">Submit</button>
-                        </div>
-                      </div>
-                    </form>
-            </div>
-          </div>
-          <div class="modal-footer">
-            <button type="button" class="btn btn-default antoclose" data-dismiss="modal">Fermer</button>
-            <button type="button" class="btn btn-primary antosubmit">Enregistrer </button>
-          </div>
-        </div>
-      </div>
-    </div>
-
-
-    <div id="CalenderModalEdit" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-      <div class="modal-dialog">
-        <div class="modal-content">
-
-          <div class="modal-header">
-            <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
-            <h4 class="modal-title" id="myModalLabel2">Edit Calendar Entry</h4>
-          </div>
-          <div class="modal-body">
-
-            <div id="testmodal2" style="padding: 5px 20px;">
-              <form id="antoform2" class="form-horizontal calender" role="form">
-                <div class="form-group">
-                  <label class="col-sm-3 control-label">Title</label>
-                  <div class="col-sm-9">
-                    <input type="text" class="form-control" id="title2" name="title2">
-                  </div>
-                </div>
-                <div class="form-group">
-                  <label class="col-sm-3 control-label">Description</label>
-                  <div class="col-sm-9">
-                    <textarea class="form-control" style="height:55px;" id="descr2" name="descr"></textarea>
-                  </div>
-                </div>
-
-              </form>
-            </div>
-          </div>
-          <div class="modal-footer">
-            <button type="button" class="btn btn-default antoclose2" data-dismiss="modal">Close</button>
-            <button type="button" class="btn btn-primary antosubmit2">Save changes</button>
-          </div>
-        </div>
-      </div>
-    </div>
-
-    <div id="fc_create" data-toggle="modal" data-target="#CalenderModalNew"></div>
-    <div id="fc_edit" data-toggle="modal" data-target="#CalenderModalEdit"></div>
-    <!-- /calendar modal -->
-        
-    
-    
-    <!-- FullCalendar -->
-    <script src="../vendors/moment/min/moment.min.js"></script>
-    <script src="../vendors/fullcalendar/dist/fullcalendar.min.js"></script>
-    <script src="../vendors/switchery/dist/switchery.min.js"></script>
-    
-
-    <!-- Custom Theme Scripts -->
-    <script src="../build/js/custom.js"></script>
-    <script src="../build/js/custom.min.js"></script>
-
-  </body>
-</html>
